<?xml version="1.0"?>
<package>
  <name>pandora_fsm</name>
  <version>0.1.0</version>

  <description>pandora_fsm</description>

  <maintainer email="tsirif@gmail.com">Tsirigotis Christos</maintainer>
  <maintainer email="lykaplaymaker@gmail.com">Giannis Lykartsis</maintainer>
  <maintainer email="jkppeppas@gmail.com">Kostas Peppas</maintainer>
  <maintainer email="siderisk@auth.gr">Sideris Konstantinos</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_fsm/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_fsm</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>pandora_data_fusion_msgs</run_depend>
  <run_depend>pandora_navigation_msgs</run_depend>
  <run_depend>state_manager</run_depend>
  <run_depend>state_manager_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pandora_rqt_gui</run_depend>
  <run_depend>pandora_end_effector_planner</run_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <build_depend>roslint</build_depend>
  <run_depend>roslint</run_depend>

  <test_depend>rostest</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
