<package format="2">
  <name>pandora_fsm</name>
  <version>0.1.0</version>

  <description>pandora_fsm</description>

  <maintainer email="siderisk@auth.gr">Sideris Konstantinos</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_fsm/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_fsm</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>pymitter</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>pandora_data_fusion_msgs</exec_depend>
  <exec_depend>pandora_navigation_msgs</exec_depend>
  <exec_depend>state_manager</exec_depend>
  <exec_depend>state_manager_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pandora_rqt_gui</exec_depend>
  <exec_depend>pandora_end_effector_planner</exec_depend>

  <depend>dynamic_reconfigure</depend>


  <test_depend>rostest</test_depend>
  <test_depend>mock</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
